--- a/public_html/bacs350/demo/26/style.css
+++ b/public_html/bacs350/demo/26/style.css
@@ -72,7 +72,7 @@ textarea {
 
 .card {
     margin: 20px;
-    border: 1px solid #0E3D65;
+    border: 3px solid black;
     width: 40%;
     float: left;
 }
@@ -85,5 +85,5 @@ textarea {
     padding: 10px;
     font-weight: bold;
     color: white;
-    background-color: #0E3D65;
+    background-color: maroon;
 }
